_cocktails/250217_test/prod-001/require-labels.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: prod-require-labels
  annotations:
    policies.kyverno.io/title: Require Labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod, Label
    policies.kyverno.io/description: >-
      Define and use labels that identify semantic attributes of your application or Deployment.
      A common set of labels allows tools to work collaboratively, describing objects in a common manner that
      all tools can understand. The recommended labels describe applications in a way that can be
      queried. This policy validates that the label `app.kubernetes.io/name` is specified with some value.      
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: check-for-labels
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - "prod"
    validate:
      message: "The label `cloudhrdk.com/env` must be prod."
      pattern:
        metadata:
          labels:
            cloudhrdk.com/env: "prod"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: beta-require-labels
  annotations:
    policies.kyverno.io/title: Require Labels
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/minversion: 1.6.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod, Label
    policies.kyverno.io/description: >-
      Define and use labels that identify semantic attributes of your application or Deployment.
      A common set of labels allows tools to work collaboratively, describing objects in a common manner that
      all tools can understand. The recommended labels describe applications in a way that can be
      queried. This policy validates that the label `app.kubernetes.io/name` is specified with some value.      
spec:
  validationFailureAction: Enforce
  background: false
  rules:
  - name: check-for-labels
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - "beta"
    validate:
      message: "The label `cloudhrdk.com/env` must be beta."
      pattern:
        metadata:
          labels:
            cloudhrdk.com/env: "beta"
